--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,9 +1,92 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Hello Coursera!</title>
-</head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Restaurent Website</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+  </head>
+
 <body>
-<h1>Hello Coursera!</h1>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+            <a href="index.html"><h1>Food, LLC</h1></a>
+          </div>
+
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+           <ul id="nav-list" class="nav navbar-nav navbar-right">
+            <li>
+              <a href="menu-categories.html" class="hidden-lg hidden-md hidden-sm" >
+                <br class="visible-xs"> Chicken
+              </a>
+            </li>
+            <li>
+              <a href="#" class="hidden-lg hidden-md hidden-sm">
+                <br class="visible-xs"> Beef
+              </a>
+            </li>
+            <li>
+              <a href="#" class="hidden-lg hidden-md hidden-sm">
+                <br class="visible-xs"> Sushi
+              </a>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
+      </div><!-- .container -->
+    </nav><!-- #header-nav -->
+  </header>
+
+
+  <div id="main-content" class="container">    
+    <h1 class="text-center">Our menu</h1>
+
+      <div class="col-lg-12 col-md-12 col-sm-12">
+      <div id="box">
+        <p id="p1">Chicken</p>
+          <div id="content" >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In enim purus, blandit a quam et, rhoncus condimentum ante. In sodales elementum vehicula. Proin ante nunc, pretium in accumsan vel, tristique ac odio. Sed aliquam gravida elit ut porttitor. Etiam ac augue mauris. Duis pharetra cursus ligula, vel dapibus massa eleifend gravida. Aenean pharetra lacus dictum mollis lobortis. Sed quis justo urna. Vivamus mollis ligula nec risus posuere, vel accumsan erat dignissim. Aliquam sollicitudin arcu id semper scelerisque. Suspendisse consectetur ut nunc vitae interdum. Mauris sodales tellus neque, in ultricies urna convallis bibendum. Proin nec dui felis. Nullam posuere libero vitae sapien porttitor, eu luctus sem feugiat.In tristique et dui sit amet dignissim. Vestibulum sit amet placerat sem. Aenean aliquet, justo sed scelerisque tempor, elit ante gravida justo, vitae ullamcorper diam magna sed magna. Maecenas vitae ipsum tincidunt, iaculis turpis ornare, cursus elit. Etiam ultricies eros quis quam tincidunt, nec varius lectus vehicula. Donec risus metus, luctus eget enim vitae, maximus placerat felis. Vivamus dignissim non neque molestie pulvinar. Etiam risus augue, hendrerit vitae feugiat id, auctor quis lorem. Maecenas ut ex convallis neque congue elementum ac eu est. 
+          </div>
+       </div>
+      </div>
+
+      <div class="col-lg-12 col-md-12 col-sm-12">
+      <div id="box">
+        <p id="p2">Beef</p>
+          <div id="content" >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In enim purus, blandit a quam et, rhoncus condimentum ante. In sodales elementum vehicula. Proin ante nunc, pretium in accumsan vel, tristique ac odio. Sed aliquam gravida elit ut porttitor. Etiam ac augue mauris. Duis pharetra cursus ligula, vel dapibus massa eleifend gravida. Aenean pharetra lacus dictum mollis lobortis. Sed quis justo urna. Vivamus mollis ligula nec risus posuere, vel accumsan erat dignissim. Aliquam sollicitudin arcu id semper scelerisque. Suspendisse consectetur ut nunc vitae interdum. Mauris sodales tellus neque, in ultricies urna convallis bibendum. Proin nec dui felis. Nullam posuere libero vitae sapien porttitor, eu luctus sem feugiat.In tristique et dui sit amet dignissim. Vestibulum sit amet placerat sem. Aenean aliquet, justo sed scelerisque tempor, elit ante gravida justo, vitae ullamcorper diam magna sed magna. Maecenas vitae ipsum tincidunt, iaculis turpis ornare, cursus elit. Etiam ultricies eros quis quam tincidunt, nec varius lectus vehicula. Donec risus metus, luctus eget enim vitae, maximus placerat felis. Vivamus dignissim non neque molestie pulvinar. Etiam risus augue, hendrerit vitae feugiat id, auctor quis lorem. Maecenas ut ex convallis neque congue elementum ac eu est. 
+          </div>
+      </div>
+      </div>
+
+      <div class="col-lg- col-md-12 col-sm-12">
+      <div id="box">
+        <p id="p3">Sushi</p>
+          <div id="content" >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In enim purus, blandit a quam et, rhoncus condimentum ante. In sodales elementum vehicula. Proin ante nunc, pretium in accumsan vel, tristique ac odio. Sed aliquam gravida elit ut porttitor. Etiam ac augue mauris. Duis pharetra cursus ligula, vel dapibus massa eleifend gravida. Aenean pharetra lacus dictum mollis lobortis. Sed quis justo urna. Vivamus mollis ligula nec risus posuere, vel accumsan erat dignissim. Aliquam sollicitudin arcu id semper scelerisque. Suspendisse consectetur ut nunc vitae interdum. Mauris sodales tellus neque, in ultricies urna convallis bibendum. Proin nec dui felis. Nullam posuere libero vitae sapien porttitor, eu luctus sem feugiat.In tristique et dui sit amet dignissim. Vestibulum sit amet placerat sem. Aenean aliquet, justo sed scelerisque tempor, elit ante gravida justo, vitae ullamcorper diam magna sed magna. Maecenas vitae ipsum tincidunt, iaculis turpis ornare, cursus elit. Etiam ultricies eros quis quam tincidunt, nec varius lectus vehicula. Donec risus metus, luctus eget enim vitae, maximus placerat felis. Vivamus dignissim non neque molestie pulvinar. Etiam risus augue, hendrerit vitae feugiat id, auctor quis lorem. Maecenas ut ex convallis neque congue elementum ac eu est. 
+          </div>
+      </div>
+      </div>
+  </div>
+
+
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
